@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillController {
    - _billRepository: IBillRepositories
    + UpdateBill(Guid id, UpdateBillRequestDTO updateBill): Task<IActionResult> 
}

interface IBillRepositories<<interface>> {
    + UpdateBill(Guid id, UpdateBillRequestDTO updateBill): Task<BillResponseDTO>
}

class BillRepositories {
    - _billDao: BillDAO
    + UpdateBill(Guid id, UpdateBillRequestDTO updateBill): Task<BillResponseDTO>

}

class BillDAO {
    - _client.From<Bill> : ISupabaseTable<Bill>
    + UpdateBill(Guid id, UpdateBillRequestDTO updateBill): Task<BillResponseDTO>
}

class Bill {
    + Id: Guid
    + ReservationId: Guid
    + TotalAmount: decimal
    + ReceivedAmount: decimal
    + ChangeAmount: decimal
    + TableId: Guid
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + CustomerId: Guid
    + ShopId: Guid
}

APIGateway -- BillController
BillController -- IBillRepositories
IBillRepositories <|.. BillRepositories
BillRepositories "1" -- "1..*" BillDAO
BillDAO "1" -- "0..*" Bill

@enduml
